issue 796: link overflow

--- a/togetherjs/togetherjs.less
+++ b/togetherjs/togetherjs.less
@@ -608,6 +608,7 @@ input.togetherjs-upload-avatar {
 
   .togetherjs-notification .togetherjs-chat-item {
     border-bottom:0px;
+    word-wrap: break-word;
   }
 
   .togetherjs-notification section#togetherjs-chat-notifier-message {
